# pdf-to-slides

./: .env.example  .gitignore  LICENSE  README.md  babel.cfg  pyproject.toml  translate_json.py
input/: file_details.json
locale/en_US/LC_MESSAGES/: messages.po
locale/pl_PL/LC_MESSAGES/: messages.po
output/list_motywacyjny_ŁukaszSendecki/: list_motywacyjny_ŁukaszSendecki.md  list_motywacyjny_ŁukaszSendecki_meta.json
pdf_to_slides/: __init__.py  main.py  markdown_to_json.py  pdf_to_markdown.py  renderer.py  summarize.py
pdf_to_slides/briefers/: __init__.py  bart_briefer.py  bert_briefer.py  cust_tokanizer_exc.py  cust_tokenizer_exc.py  model_comparison.md  nltk_briefer.py  spacy_briefer.py  txt_rank_briefer.py
pdf_to_slides/converters/: __init__.py  data_to_latex.py  json_to_data.py  markdown_to_json.py  markdown_to_latex.py  pdf_to_markdown.py
pdf_to_slides/services/: __init__.py  data_to_latex.py  markdown_to_dictionary.py  markdown_to_json.py  markdown_with_images.py  openai_api.py  pdf_to_markdown.py  pdf_to_slides.py  process_data.py  summarize_text.py  tex_to_pdf.py  translate_text.py
resources/: schema.json
templates/: agenda.tex  bibliography.tex  bullet_list.tex  conclusion.tex  document.tex  image.tex  table.tex  text.tex  title.tex
