[tool.poetry]
name = "pdf-to-slides"
version = "0.1.0"
description = ""
authors = ["jilquero <szczygielski.mateusz@wp.pl>"]
readme = "README.md"

[tool.poetry.scripts]
pts = "pdf_to_slides.main:app"

[tool.poetry.dependencies]
python = "^3.12"
marker-pdf = "^0.2.13"
typer = "^0.12.3"
markdown-to-json = "^2.1.1"
spacy = "^3.7.5"
pytextrank = "^3.3.0"
jinja2 = "^3.1.4"
babel = "^2.15.0"
nltk = "^3.8.1"
openai = "^1.34.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
